# steward

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent_loop.sh  guide.md  init_cmd.py  orchestrator.py  preflight.py  pyproject.toml  status_cmd.py
.github/workflows/: ci.yml
charter_worker/: actions.py  add_task.py  llm.py  orchestrator.py  promote.py  runner.py
charter_worker/comm/: __main__.py  digest.py  email.py
charter_worker/executor/: agent.py  cycle.py
charter_worker/phases/: __init__.py  feedback.py  gmail_reader.py
charter_worker/proactive/: __init__.py  email_composer.py  gmail_reader.py  guardrails.py  llm.py  phase_context.py  phase_research.py  phase_speculate.py  phase_synthesize.py
charter_worker/reflection/: actor.py
charter_worker/research/: __main__.py  cli.py  engine.py
charter_worker/utils/: helpers.py
docs/: agent-setup.md  architecture-diagram.md  architecture.md  comparison.md  limitations.md  theory.md  workflow-promotion.md
steward/: add_task.py  llm.py  orchestrator.py  preflight.py  promote.py  runner.py
steward/comm/: __main__.py  digest.py  email.py
steward/phases/: email_composer.py  feedback.py  guardrails.py  research.py  speculate.py  synthesize.py
steward/proactive/: __init__.py
steward/reflection/: __init__.py  actor.py  analyzer.py  (+5 more)
templates/: charter.yaml.example  email_config.example.yaml  tasks.yaml.example
tests/: test_actions.py  test_add_task.py  test_email.py  test_init_cmd.py  test_integration.py  test_llm_cli.py  test_orchestrator.py  test_promote.py  test_runner.py  test_status_cmd.py
(+19 files in other folders)
