[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steward"
version = "0.2.0"
description = "Delegate work, not attention. Start with agents, crystallize into scripts."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
email = ["markdown>=3.4", "weasyprint>=60.0"]
all = ["markdown>=3.4", "weasyprint>=60.0"]

[project.scripts]
steward = "steward.orchestrator:main"
steward-init = "init_cmd:main"
steward-status = "status_cmd:main"
steward-promote = "steward.promote:main"
steward-add-task = "steward.add_task:main"

[tool.setuptools.packages.find]
include = ["steward*"]

[tool.setuptools]
py-modules = ["init_cmd", "status_cmd"]
